--- a/src/pages/loading-page/style.css
+++ b/src/pages/loading-page/style.css
@@ -6,6 +6,23 @@
 #wrapper{
 	overflow: hidden;
 }
+.image{
+	width: 100%;
+	height: 100vh;
+	background: url(img/background-image.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-attachment: fixed;
+	background-position: right;
+	filter: blur(2px);
+	transform: scale(1.02);
+}
+.back{
+	width: 100%;
+	height: 100vh;
+	background-color: #282828;
+	opacity: 0.3;
+}
 .holder img{
 	height: 80px;
 	width: 80px;
