--- a/src/pages/loading-page/style.css
+++ b/src/pages/loading-page/style.css
@@ -9,7 +9,7 @@
 .image{
 	width: 100%;
 	height: 100vh;
-	background: url(img/background-image.jpg);
+	background: url(./background-image.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-attachment: fixed;
